[gd_scene load_steps=4 format=3 uid="uid://cis4te6nth5k"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_enemy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 12.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_enemy")

[node name="EnemySprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = true

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_hitbox")
debug_color = Color(0.85098, 0.337255, 0.0, 0.419608)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
